<resources>
    <string name="app_name" translatable="false">Teleprompter</string>
    <string name="no_connection" translatable="false">Can not connect to the server</string>
    <string name="wrong_data" translatable="false">Some inputs are incorrect</string>
    <string name="no_file" translatable="false">Something went wrong while reading the file</string>
    <string name="title_activity_editor" translatable="false">EditorActivity</string>
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="title_activity_start" translatable="false">StartActivity</string>
    <string name="login_label">Sign in</string>
    <string name="settings_label">Settings</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="password_hint">Password</string>
    <string name="twenty_percent" translatable="false">20%</string>
    <string name="one_hundred_percent" translatable="false">100%</string>
    <string name="five_hundred_percent" translatable="false">500%</string>
    <string name="test_date" translatable="false">18.04.2021</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="use_app_buttons">You should use app buttons instead</string>

    <!-- Preferences -->
    <string name="pref_category" translatable="false">Category</string>
    <string name="color1_title" translatable="false">Color 1</string>
    <string name="color1_summary" translatable="false">black color by default, set by reference</string>
    <string name="color2_title" translatable="false">Color 2</string>
    <string name="color2_summary" translatable="false">not persistent color\nalpha slider added via code</string>
    <string name="color3_title" translatable="false">Color 3</string>
    <string name="color3_summary" translatable="false">picker with alpha slider</string>
    <string name="color4_title" translatable="false">Color 4</string>
    <string name="color4_summary" translatable="false">color set with HEX code in xml</string>

    <string name="next_button">Next</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Register</string>
    <string name="please_sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="please_sign_in">Sign in</string>
    <string name="guest">Guest</string>
    <string name="title_label_editor">Title</string>
    <string name="skip">Skip</string>
    <string name="control">Remote</string>
    <string name="speed">Speed</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="text">Text</string>
    <string name="background">Background</string>
    <string name="about">About this app</string>
    <string name="connect">Connect</string>
    <string name="test_profile_name">Your name</string>
    <string name="test_file_name">TV program \"School and I\"</string>
    <string name="name_hint">Name</string>
    <string name="attention">Attention!</string>
    <string name="guest_mode_attention">In guest mode many functions are unavailable.\nMore information in \"About this app\" in Settings.</string>
    <string name="developed_by">Developed by: Aleksei Orlov\nDesigned by: Yuri Morozoff</string>
    <string name="developer_vk" translatable="false">\@alexey_orlov65</string>
    <string name="designer_vk" translatable="false">\@business_operator</string>
    <string name="copyright" translatable="false">©SBC</string>
    <string name="test_editor_title" translatable="false">Телепрограм...</string>
    <string name="return_back">Go back</string>
    <string name="account_radio_button">Your account</string>
    <string name="disc_radio_button">Your file storage</string>
    <string name="file_location">File location</string>
    <string name="choose_file_location_in_storage">Choose location in local storage</string>
    <string name="file_name">File name</string>
    <string name="create_file">Create</string>
    <string name="file_creation">File creation</string>
    <string name="open_play_or_write_mode">Where to show text?</string>
    <string name="on_this_device">On this device</string>
    <string name="broadcast">Broadcast to another device</string>
    <string name="choose_color">Choose color</string>
    <string name="password_confirm_hint">Verify your password</string>
    <string name="wait_text">Wait while text is being sent</string>
    <string name="should_save_to_server">Do you want to add this file to your account or just open it?</string>
    <string name="should_save">Save and open</string>
    <string name="just_open">Just open</string>
    <string name="about_text" translatable="false">Добро пожаловать в приложение TelePROmoter!\n
Здесь вы можете узнать, как наше приложение может помочь вам.\n
В приложении доступны:\n
1. Создание нового текста.\n
Вы можете создать новый текст нажав кнопку с плюсиком в меню!\n
2. Загрузка текста с телефона.\n
Вы можете загрузить уже готовый текст нажав кнопку со стрелкой вверх в меню!\n
3. Редактор текста.\n
Вы можете редактировать текст прямо в приложении, когда выберете какой текст хотите использовать\n
4. Проигрывание текста\n
Вы можете начать проигрывание выбранного текста нажав кнопку плей снизу в навигации.\n
5. Отправка и загрузка текста из облака.\n
Все ваши созданные тексты автоматически сохраняются в облаке и вы можете открыть их после закрытия приложения.\n
6. Дистанционное управление с помощью пульта.\n
Вы можете управлять текстом с помощью пульта, подключив его через bluetooth. Подробнее о кнопках на фото.\n
7. Соединение телефона и планшета и дистанционное управление телефоном.\n
Для этого соедините устройства wifi или bluetooth и включите режим совместного использования в приложении </string>
    <string name="can_not_open_read_fragment">To play texts from another device you have to enable Bluetooth. If you want to play text on this device than just play it from the editor</string>
    <string name="bt_adapter_unavailable">Unfortunately, Bluetooth adapter is unavailable on this device so you can\'t play texts from another device here</string>
    <string name="no_documents_yet">Ups, you don\'t have any documents…\nIf this is your first time here, we recommend that you view the \"About this app\" section in the settings</string>
</resources>