<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingBottom="50dp"
    android:background="@color/white"
    tools:context=".GuestFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attention"
        android:textAppearance="@style/attention"
        android:fontFamily="@font/montserrat_alternates_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/guest_mode_attention"
        android:textAppearance="@style/guest_mode_attention"
        android:fontFamily="@font/montserrat_alternates_regular" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/please_sign_up"
        android:textAppearance="@style/please_sign_in_out"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_alternates_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAppearance="@style/or"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_alternates_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_in"
        android:textAppearance="@style/please_sign_in_out"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_alternates_medium" />

</LinearLayout>