<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/file_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/montserrat_alternates_light"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/rectangle_6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_location"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/file_location_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/account_radio_button"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/account_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"
            android:fontFamily="@font/montserrat_alternates_light"
            android:text="@string/account_radio_button" />

        <RadioButton
            android:id="@+id/disc_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/blue"
            android:fontFamily="@font/montserrat_alternates_light"
            android:text="@string/disc_radio_button" />
    </RadioGroup>

    <Button
        android:id="@+id/choose_file_location_button"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:text="@string/choose_file_location_in_storage"
        android:fontFamily="@font/montserrat_alternates_regular"
        android:drawableEnd="@drawable/choose_file_ico" />

    <Button
        android:id="@+id/create_file_button_dialog"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:text="@string/create_file"
        android:fontFamily="@font/montserrat_alternates_regular" />

</LinearLayout>