<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:text="@string/open_play_or_write_mode" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/broadcast_choose_dialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center"
            android:text="@string/broadcast"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/on_this_device_choose_dialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/on_this_device"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>