<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/should_save_to_server"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_and_open_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#8BC34A"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/should_save" />

        <Button
            android:id="@+id/just_open_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/just_open" />
    </LinearLayout>

</LinearLayout>