<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <View
        android:layout_width="813dp"
        android:layout_height="558dp"
        android:background="@drawable/ellipse_7"
        android:translationX="-214dp"
        android:translationY="-404dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/sign_up"
        android:textAppearance="@style/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Имя -->

        <EditText
            android:id="@+id/name_sign_up_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rectangle_6"
            android:fontFamily="@font/montserrat_alternates_light"
            android:gravity="center_vertical"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textAppearance="@style/email" />

        <!-- Email -->

        <EditText
            android:id="@+id/email_sign_up_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rectangle_6"
            android:fontFamily="@font/montserrat_alternates_light"
            android:gravity="center_vertical"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textAppearance="@style/email" />

        <!-- Пароль -->

        <EditText
            android:id="@+id/password_sign_up_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rectangle_6"
            android:fontFamily="@font/montserrat_alternates_light"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textAppearance="@style/password" />

        <!--    Кнопка "Далее"   -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="SignUp"
                android:background="@drawable/rectangle_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/next_button"
                android:textAppearance="@style/next_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:layout_width="543dp"
        android:layout_height="543dp"
        android:background="@drawable/ellipse_10"
        android:translationX="250dp"
        android:translationY="450dp"
        android:onClick="ToLoginActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center"
        android:text="@string/login_label"
        android:textAppearance="@style/text_sign_in_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>