<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/broadcast_button_sign_in"
        android:layout_width="160dp"
        android:layout_height="142dp"
        android:background="@drawable/ellipse_11"
        android:translationX="51dp"
        android:translationY="-54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/tablet_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="543dp"
        android:layout_height="543dp"
        android:background="@drawable/ellipse_8"
        android:translationX="-187dp"
        android:translationY="-395dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tablet_broadcast_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bluetooth_button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <View
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ellipse_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bluetooth_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wifi_button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ellipse_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wifi_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <!-- Войти -->

    <TextView
        android:layout_width="269dp"
        android:layout_height="68dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:text="@string/login_label"
        android:textAppearance="@style/text_sign_in"
        android:gravity="top"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Email -->

        <EditText
            android:id="@+id/email_sign_in_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rectangle_6"
            android:fontFamily="@font/montserrat_alternates_light"
            android:gravity="center_vertical"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textAppearance="@style/email" />

        <!-- Пароль -->

        <EditText
            android:id="@+id/password_sign_in_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rectangle_6"
            android:fontFamily="@font/montserrat_alternates_light"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textAppearance="@style/password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <!-- Забыли пароль? -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:fontFamily="@font/montserrat_alternates_light_italic"
                android:textAppearance="@style/forgot_password"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <!--    Кнопка "Далее"   -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Login"
                    android:background="@drawable/rectangle_7"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:text="@string/next_button"
                    android:textAppearance="@style/next_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <!-- Пропустить -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:fontFamily="@font/montserrat_alternates_italic"
            android:textAppearance="@style/skip"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="35dp"
            android:onClick="Skip"
            />

    </LinearLayout>

    <!-- Регистрация -->

    <View
        android:layout_width="543dp"
        android:layout_height="543dp"
        android:background="@drawable/ellipse_9"
        android:translationX="130dp"
        android:translationY="440dp"
        android:onClick="ToRegistrationActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="top"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>